--- a/public/style.css
+++ b/public/style.css
@@ -32,7 +32,7 @@
     justify-content: space-around;
     background-color: #333;
   }
-  
+
   .logo img{
     width: 100px;
     height:100px;
@@ -160,25 +160,26 @@
     outline: none;
     text-decoration: none;
   }
-  .card:hover{
-   background: local;
+  /* .card:hover{
+   background: local; }*/
 
-  }
+  
   .card a h3{
     color: #333;
     margin-bottom: 10px;
   }
-  .card a h3:hover{
+  /* .card a h3:hover{
     color: #fffbfb;
-    margin-bottom: 10px;
-  }
+    margin-bottom: 10px; }*/
+  
   
   .card a p {
     color: #666;
   }
+  /*
   .card a p:hover {
     color: #ffffff;
-  }
+  } */
   
   /* Footer Styles */
   footer {
@@ -193,6 +194,22 @@
   
   footer p {
     font-size: 14px;
+  }
+
+  footer i {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-top: 20px;
+    color: black;
+    font-size: 24px; /* Adjust icon size */
+    transition: color 0.3s;
+    gap: 20px;
+  }
+
+  footer i:hover {
+    color: #45a049; /* Change color on hover */
+    cursor: pointer;
   }
   
   /* Media Queries for Mobile Devices */
@@ -216,7 +233,11 @@
     .container {
       grid-template-columns: 1fr;
     }
-  }  
+
+    aside {
+      margin-top: 20px; /* Moves aside below main */
+    }
+  } 
 
 .sidebar-container {
   flex: 1;
